[tool.poetry]
name = "currency-convert"
version = "0.1.0"
description = "Currency Convert API"
authors = ["Renny Montero <rennym19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiohttp = "^3.8.1"
aioredis = "^2.0.1"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
